--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ts-jest": "^25.2.1"
   },
   "dependencies": {
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "minimist": ">=0.2.1"
   }
 }
